styles.css
* {
    padding: 0;
    margin: 0;
}

body{
    background-size: cover;
    background-color: #EBC7E6;
    font-family: 'Rubik', sans-serif;
}
.menu-bar {
    background-color: #BFACE2;
    text-align: center;
}

.menu-bar ul{
    display: inline-flex;
    list-style: none;
    color: black;
}
.menu-bar ul li{
    width: 130px;
    margin: 15px;
    padding: 15px;
}

.menu-bar ul li a{
    text-decoration: none;
    color: black;
}

.menu-bar ul li:hover{
    background: #A084DC;
    border-radius: 4px;
}

.logo{
    float: left;
    padding-left: 20px;
}
/* dessert styles */
.submenu-dessert{
    display: none;
}

.menu-bar ul li:hover .submenu-dessert{
    display: block;
    position: absolute;
    border-radius: 4px;
    background-color: #645CBB;
    margin-top: 15px;
    margin-left: -15px;
    z-index: 2;
}
.menu-bar ul li:hover .submenu-dessert ul{
    display: block;
    margin: 10px;
}

.menu-bar ul li:hover .submenu-dessert ul li{
    width: 160px;
    padding: 10px;
    border-bottom: none;
}

.menu-bar ul li:hover .submenu-dessert ul li a:hover{
    color: #3e3881;
}

/*entrees styles*/
.submenu-entrees{
    display: none;
}

.menu-bar ul li:hover .submenu-entrees{
    display: block;
    position: absolute;
    border-radius: 4px;
    background-color: #645CBB;
    margin-top: 15px;
    margin-left: -15px;
}

.menu-bar ul li:hover .submenu-entrees ul{
    display: block;
    margin: 10px;
}

.menu-bar ul li:hover .submenu-entrees ul li{
    width: 160px;
    padding: 10px;
    border-bottom: none;
}

.menu-bar ul li:hover .submenu-entrees ul li a:hover{
    color: #3e3881;
}

/* main courses styles*/
.submenu-maincourse{
    display: none;
}

.menu-bar ul li:hover .submenu-maincourse{
    display: block;
    position: absolute;
    border-radius: 4px;
    background-color: #645CBB;
    margin-top: 15px;
    margin-left: -15px;
}

.menu-bar ul li:hover .submenu-maincourse ul{
    display: block;
    margin: 10px;
}

.menu-bar ul li:hover .submenu-maincourse ul li{
    width: 160px;
    padding: 10px;
    border-bottom: none;
}

.menu-bar ul li:hover .submenu-maincourse ul li a:hover{
    color: #3e3881;
}

/* salads styles */
.submenu-salads{
    display: none;
}

.menu-bar ul li:hover .submenu-salads{
    display: block;
    position: absolute;
    border-radius: 4px;
    background-color: #645CBB;
    margin-top: 15px;
    margin-left: -15px;
}

.menu-bar ul li:hover .submenu-salads ul{
    display: block;
    margin: 10px;
}

.menu-bar ul li:hover .submenu-salads ul li{
    width: 160px;
    padding: 10px;
    border-bottom: none;
}

.menu-bar ul li:hover .submenu-salads ul li a:hover{
    color: #3e3881;
}

/* snacks styles */
.submenu-snacks{
    display: none;
}

.menu-bar ul li:hover .submenu-snacks{
    display: block;
    position: absolute;
    border-radius: 4px;
    background-color: #645CBB;
    margin-top: 15px;
    margin-left: -15px;
}

.menu-bar ul li:hover .submenu-snacks ul{
    display: block;
    margin: 10px;
}

.menu-bar ul li:hover .submenu-snacks ul li{
    width: 160px;
    padding: 10px;
    border-bottom: none;
}

.menu-bar ul li:hover .submenu-snacks ul li a:hover{
    color: #3e3881;
}

.pic-ctn {
    width: 300vw;
    height: 200px;
  }
  
  @keyframes display {
    0% {
      transform: translateX(200px);
      opacity: 0;
    }
    10% {
      transform: translateX(0);
      opacity: 1;
    }
    20% {
      transform: translateX(0);
      opacity: 1;
    }
    30% {
      transform: translateX(-200px);
      opacity: 0;
    }
    100% {
      transform: translateX(-200px);
      opacity: 0;
    }
  }

  .pic-ctn {
    position: relative;
    width: 15vw;
    height: 300px;
  }
  
  .pic-ctn > img {
    position: absolute;
    top: 0;
    left: calc(50% - 100px);
    opacity: 0;
    animation: display 10s infinite;
  }
  
  img:nth-child(2) {
    animation-delay: 2s;
  }
  img:nth-child(3) {
    animation-delay: 4s;
  }
  img:nth-child(4) {
    animation-delay: 6s;
  }
  img:nth-child(5) {
    animation-delay: 8s;
  }

  .pic{
    height: max-content;
    width: 450px;
  }

